[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = "Time Series Forecasting with Deep Learning"
authors = ["LM <hi@leima.is>"]
readme = "README.md"
packages = [{include = "ts_dl_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.4.6"
mkdocs-autorefs = "^0.5.0"
mkdocstrings = "^0.23.0"
mkdocs-with-pdf = "^0.9.3"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocs-bibtex = "^2.11.0"
mkdocs-jupyter = "^0.24.6"
mkdocs-exclude-search = "^0.6.5"


[tool.poetry.group.darts.dependencies]
darts = "^0.26.0"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.21.1"
jupytext = "^1.15.2"


[tool.poetry.group.visualization.dependencies]
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
