[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = "Time Series Forecasting with Deep Learning"
authors = ["LM <hi@leima.is>"]
readme = "README.md"
packages = [{include = "ts_dl_utils", from = "dl/notebooks/"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.4.10"
mkdocs-autorefs = "^0.5.0"
mkdocstrings = "^0.23.0"
mkdocs-with-pdf = "^0.9.3"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocs-bibtex = "^2.11.0"
mkdocs-jupyter = "<=0.24.2"
mkdocs-exclude-search = "^0.6.5"
mkdocs-print-site-plugin = "^2.3.6"
loguru = "^0.7.2"


[tool.poetry.group.darts.dependencies]
darts = "^0.26.0"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.21.1"
jupytext = "^1.15.2"


[tool.poetry.group.visualization.dependencies]
seaborn = "^0.12.2"


[tool.poetry.group.data.dependencies]
eerily = "^0.2.1"


[tool.poetry.group.torch.dependencies]
lightning = "^2.1.2"
tensorboard = "^2.15.1"
torchmetrics = "^1.2.0"
torchdyn = "^1.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
